# DiscordBot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MIGRATION_PLAN.md  Plan.md  README.md  SECURITY_GUIDE.md  bot.py  config.js  database.js  discord-bot.json  docker-compose.dev.yml  docker-compose.yml  fix_cogs.py  index.js  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  structure.js
commands/: botinfo.js  commands.js  gamingLeaderboard.js  help.js  leaderboard.js  ping.js  remindme.js  serverinfo.js  stats.js  userinfo.js
config/: apiConfig.js  apis.js  botStatus.js  dashboard.js
dashboard/: app.js
database/: connection.js  index.js
events/: guildMemberAdd.js  guildMemberRemove.js  guildMemberUpdate.js  inviteCreate.js  messageCreate.js  presenceUpdate.js  ready.js  voiceStateUpdate.js
migrations/: 001_initial_schema.sql  003_security_schema.sql  004_marketplace_schema.sql  005_community_additions.sql  005_guild_and_rss_schema.sql  006_profiles_and_requests_schema.sql  007_production_indexes.sql  008_fix_schema_inconsistencies.sql  008_warnings_and_moderation.sql  009_footer_state.sql  010_rpg_activity_tracking.sql  011_inactivity_tracking.sql  012_activity_duration_tracking.sql  013_activity_details_tracking.sql
models/: AnalyticsConfig.js  CommandLog.js  DashboardConfig.js  Deal.js  GamingConfig.js  LogEntry.js  NotificationConfig.js  TrackedProduct.js  User.js  UserActivity.js  VoiceActivity.js
services/: MonitoringService.js  dealTracker.js  popularProductTracker.js
src/: bot.py
utils/: activityTracker.js  apiManager.js  backgroundMonitor.js  channelVerifier.js  commandLoader.js  connectionAnalytics.js  dashboardManager.js  database.js  embedColors.js  embedCreator.js  embedUtils.js  errorHandler.js  eventLoader.js  footerRotator.js  formatters.js  inviteAnalytics.js  inviteAnalyzer.js  inviteRewards.js  logger.js  loggingManager.js  massDM.js  presenceTracker.js  priceTracker.js  rateLimiter.js  retention.js  roleManager.js  socialConnections.js  staffAlerts.js  (+9 more)
(+190 files in other folders)
