[project]
name = "discord-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiocron>=2.1",
  "aiofiles>=25.1.0",
  "aiohttp>=3.13.5",
  "apscheduler>=3.11.2",
  "asyncpg>=0.29.0",
  "beautifulsoup4>=4.14.3",
  "feedparser>=6.0.12",
  "nextcord>=3.1.1",
  "python-dateutil>=2.9.0.post0",
  "python-dotenv>=1.2.2",
  "python-leetcode>=1.2.1",
  "pytz>=2026.1.post1",
  "validators>=0.35.0",
]
