[project]
name = "discord-bot"
version = "0.1.0"
description = "VEKA — a nextcord-based professional networking Discord bot backed by PostgreSQL"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nextcord==3.2.0",
    "python-dotenv==1.2.2",
    "asyncpg==0.31.0",
    "aiohttp==3.14.1",
    "feedparser==6.0.12",
    "beautifulsoup4==4.15.0",
    "validators==0.35.0",
]
